Fixed some mobile navigation bug such as white space on the right.

--- a/_sass/2-layouts/index.sass
+++ b/_sass/2-layouts/index.sass
@@ -184,7 +184,8 @@ h2.skills
 /* for the skills section
 .skills-content-wrapper
   margin: auto
-  max-width: 800px
+  max-width: 600px
+  min-width: 300px
   padding: 60px 20px 0px 20px
   display: flex
   flex-direction: row
@@ -201,8 +202,8 @@ h2.skills
       flex-direction: row
       justify-content:  space-between
       .skills-img
-        height: 100px
-        width: 100px
+        height: auto%
+        width: 100%
         flex: 0 0 100px
         border-radius: 3px
         background:
@@ -233,5 +234,6 @@ h2.skills
       .skill-last
         flex-direction: column
         justify-content:  space-between
+      
 hr
   max-width: 600px
